# packaging-publishing-rkd43-99

./: .gitignore  LICENSE  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml
.github/workflows/: tests.yml
docs/src/cancer_prediction_rkd43_99/: cancer_model.md
models/: my-model.pkl
src/cancer_prediction_rkd43_99/: cancer_model.py
src/cancer_prediction_rkd43_99/scripts/: app.py  run.py
tests/: test_CancerModel.py
